--- a/Web/ClientApp/src/app/quote/quote.component.html
+++ b/Web/ClientApp/src/app/quote/quote.component.html
@@ -30,7 +30,20 @@
           <input id="email" name="email" type="text" formControlName="email"
                  class="pl-4 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset
                  ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-sky-600 sm:text-sm sm:leading-6">
-          <span *ngIf="loginForm.controls.email.hasError('email') || (loginForm.controls.email.touched && !loginForm.controls.email.valid)" class="text-red-500 font-light">*Please enter valid email</span>
+          <span
+            *ngIf="loginForm.controls.email.hasError('email') || (loginForm.controls.email.touched && !loginForm.controls.email.valid)"
+            class="text-red-500 font-light">*Please enter valid email</span>
+        </div>
+
+        <div class="flex items-center justify-between mt-2">
+          <label for="phone" class="block text-sm font-medium leading-6 text-gray-900">Contact number</label>
+        </div>
+        <div class="mt-2">
+          <input id="phone" name="phone" type="text" formControlName="phone"
+                 class="pl-4 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset
+                 ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-sky-600 sm:text-sm sm:leading-6">
+          <span *ngIf="loginForm.controls.phone.touched && !loginForm.controls.phone.valid"
+                class="text-red-500 font-light">*Please enter phone number</span>
         </div>
 
         <div class="flex items-center justify-between mt-2">
@@ -38,18 +51,23 @@
         </div>
         <div class="mt-2">
           <textarea id="message" name="message" type="text" formControlName="message" [rows]="4"
-                 class="pl-4 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset
+                    class="pl-4 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset
                  ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-sky-600 sm:text-sm sm:leading-6"></textarea>
-          <span *ngIf="!loginForm.controls.message.valid&&loginForm.controls.message.touched" class="text-red-500 font-light">*Please enter your message</span>
+          <span *ngIf="!loginForm.controls.message.valid&&loginForm.controls.message.touched"
+                class="text-red-500 font-light">*Please enter your message</span>
         </div>
 
 
         <div class="mt-8 gap-y-2">
-          <button type="button" (click)="send()"
+          <button type="button" (click)="send()" [disabled]="!loginForm.valid || isButtonDisabled" id="button"
                   class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-2.5 text-sm
-                  font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
-                  focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Submit
+               font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
+               focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600
+               disabled:bg-slate-200 disabled:text-gray-400 cursor-pointer disabled:cursor-default">
+            <span *ngIf="isButtonDisabled">Sending...</span>
+            <span *ngIf="!isButtonDisabled">Submit</span>
           </button>
+
 
           <button (click)="cancel()" type="button" class="mt-2 flex w-full justify-center rounded-md bg-white px-3.5 py-2.5
           text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">Cancel
