--- a/Web/ClientApp/src/app/home/home.component.html
+++ b/Web/ClientApp/src/app/home/home.component.html
@@ -21,11 +21,11 @@
       <div class="mx-auto max-w-2xl lg:mx-0 lg:grid lg:max-w-none lg:grid-cols-2 lg:gap-x-16 lg:gap-y-6 xl:grid-cols-1 xl:grid-rows-1 xl:gap-x-8">
         <h1 class="max-w-2xl text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl lg:col-span-2 xl:col-auto">Importing success, Exporting Prosperity Worldwide</h1>
         <div class="mt-6 max-w-xl lg:mt-0 xl:col-end-1 xl:row-start-1">
-          <p class="text-lg leading-8 text-gray-600"> At Khan Traders, we proudly hail from Halifax, Canada, strategically positioned in the heart of Atlantic Canada.
+          <p class="text-lg leading-8 text-gray-600 text-justify"> At Khan Traders, we proudly hail from Halifax, Canada, strategically positioned in the heart of Atlantic Canada.
             Specializing in the export of scrap materials, we transcend regional boundaries to bring prosperity not only to our local community but to destinations worldwide.
             Our commitment to excellence and sustainable practices forms the backbone of our operations, ensuring that the scrap trade is not just a transaction but a catalyst for positive change.
 
-            Join us in shaping a sustainable future as we export success from Atlantic Canada to the global stage. Explore our services and witness how, through responsible scrap management, we contribute to a world where prosperity knows no borders.</p>
+            Join us in shaping sustainable future as we export success from Atlantic Canada to the global stage. Explore our services and witness how, through responsible scrap management, we contribute to a world where prosperity knows no borders.</p>
           <div class="mt-10 flex items-center gap-x-6">
 
             <a href="/quote" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get quotation</a>
