--- a/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
+++ b/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
@@ -7,7 +7,7 @@
     <!-- Second part for the image -->
     <div class="flex-2">
       <div class="hidden sm:flex">
-      <img class="h-20 w-auto" src="./assets/KT--PNG.png" alt="Khan Traders">
+      <img class="h-20 w-auto" src="./assets/logos/KT--PNG.png" alt="Khan Traders">
       </div>
     </div>
 
@@ -44,7 +44,7 @@
       <div class="flex items-center justify-between">
         <a href="#" class="-m-1.5 p-1.5">
           <span class="sr-only">OnePlanet</span>
-          <img class="h-20 w-auto" src="./assets/KT--PNG.png" alt="Khan Traders">
+          <img class="h-20 w-auto" src="./assets/logos/KT--PNG.png" alt="Khan Traders">
         </a>
         <div *ngIf="!IsMenuOpen" class="flex ">
           <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700"
