--- a/Web/ClientApp/src/app/home/home.component.html
+++ b/Web/ClientApp/src/app/home/home.component.html
@@ -28,7 +28,6 @@
             Join us in shaping sustainable future as we export success from Atlantic Canada to the global stage. Explore our services and witness how, through responsible scrap management, we contribute to a world where prosperity knows no borders.</p>
           <div class="mt-10 flex items-center gap-x-6">
 
-            <a href="/quote" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get quotation</a>
             <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></a>
           </div>
         </div>
@@ -41,4 +40,21 @@
 </div>
 
 <app-products></app-products>
+<div class="relative isolate flex items-center gap-x-6 overflow-hidden bg-gray-50 px-6 py-2.5 sm:px-3.5 sm:before:flex-1">
+  <div class="absolute left-[max(-7rem,calc(50%-52rem))] top-1/2 -z-10 -translate-y-1/2 transform-gpu blur-2xl" aria-hidden="true">
+    <div class="aspect-[577/310] w-[36.0625rem] bg-gradient-to-r from-[#FF6600] to-[#1E1F3E] opacity-30" ></div>
+  </div>
+  <div class="absolute left-[max(45rem,calc(50%+8rem))] top-1/2 -z-10 -translate-y-1/2 transform-gpu blur-2xl" aria-hidden="true">
+    <div class="aspect-[577/310] w-[36.0625rem] bg-gradient-to-r from-[#1E1F3E] to-[#FF6600] opacity-30" ></div>
+  </div>
+  <p class="text-sm leading-6 text-gray-900 font-semibold">
+
+      Do you have any question | Get quotation
+
+  </p>
+  <div class="flex flex-1 justify-end">
+    <a href="/quote" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get quotation</a>
+  </div>
+</div>
+
 <app-testimonial></app-testimonial>
