--- a/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
+++ b/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
@@ -18,7 +18,7 @@
     <div class="flex-2">
       <nav class="hidden sm:flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
         <div class="flex space-x-12">
-          <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Product</a>
+          <button (click)="scrollToProducts()" class="text-sm font-semibold leading-6 text-gray-900">Product</button>
           <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features</a>
           <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Company</a>
         </div>
@@ -68,7 +68,7 @@
       <div *ngIf="IsMenuOpen" class="mt-6 flow-root">
         <div class="-my-6 divide-y divide-gray-500/10">
           <div class="space-y-2 py-6">
-            <a href="#"
+            <a (click)="scrollToProducts()"
                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Product</a>
             <a href="#"
                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Features</a>
