--- a/Web/ClientApp/src/app/products/products.component.html
+++ b/Web/ClientApp/src/app/products/products.component.html
@@ -1,5 +1,4 @@
-
-<div class="bg-white ">
+<div class="bg-white" id="products">
   <div class="mx-auto max-w-xl px-4 py-8 lg:max-w-7xl lg:px-8">
     <h2 class="text-2xl font-bold tracking-tight text-gray-900">Our products</h2>
     <p class="mt-4 text-base text-gray-500">Transforming scrap into sustainable treasures, we are Halifax's premier trading destination for recycled materials, contributing to a greener future one transaction at a time.</p>
