WIP: flow bite has been integrated. need to finalize the product details

--- a/Web/ClientApp/src/app/products/products.component.html
+++ b/Web/ClientApp/src/app/products/products.component.html
@@ -4,7 +4,7 @@
     <p class="mt-4 text-base text-gray-500">Transforming scrap into sustainable treasures, we are Halifax's premier trading destination for recycled materials, contributing to a greener future one transaction at a time.</p>
 
     <div class="mt-10 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-8 lg:space-y-0">
-      <a href="#" class="group block">
+      <a (click)="goToProduct()" class="group block">
         <div aria-hidden="true" class="aspect-h-2 aspect-w-3 overflow-hidden rounded-lg lg:aspect-h-6 lg:aspect-w-5 group-hover:opacity-75 sm:h-48 h-72">
           <img src="./assets/scrap/hsm.jpeg" alt="Brown leather key ring with brass metal loops and rivets on wood table." class="h-full w-full object-cover object-center">
         </div>
