--- a/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
+++ b/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
@@ -20,7 +20,7 @@
         <div class="flex space-x-12">
           <button (click)="scrollToProducts()" class="text-sm font-semibold leading-6 text-gray-900">Product</button>
           <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features</a>
-          <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Company</a>
+          <button (click)="goToAbout()" class="text-sm font-semibold leading-6 text-gray-900">Company</button>
         </div>
       </nav>
     </div>
@@ -72,7 +72,7 @@
                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Product</a>
             <a href="#"
                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Features</a>
-            <a href="#"
+            <a (click)="goToAbout()"
                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Company</a>
           </div>
           <div class="py-6">
