--- a/Web/ClientApp/src/app/about/about.component.html
+++ b/Web/ClientApp/src/app/about/about.component.html
@@ -7,14 +7,14 @@
   <div class="sm:w-1/2 p-5">
     <div class="text">
       <span class="text-gray-500 border-b-2 border-indigo-600 uppercase">About us</span>
-      <h2 class="my-4 font-bold text-3xl  sm:text-4xl ">About <span class="text-indigo-600">Khan Traders</span>
+      <h2 class="my-4 font-bold text-3xl  sm:text-4xl text-khanBlue">About <span class="text-khanOrange">Khan Traders</span>
       </h2>
-      <p class="text-gray-700">
+      <p class="text-lg leading-8 text-gray-600 text-justify">
         Welcome to Khan Traders, a key player in the realm of scrap import and export, specializing in facilitating seamless transactions between the rich provinces of Atlantic Canada and Pakistan. Our journey is rooted in a commitment to simplicity,
         ensuring that our clients experience a smooth and straightforward process in the dynamic world of scrap materials trade.
       </p>
       <br>
-      <p class="text-gray-700">
+      <p class="text-lg leading-8 text-gray-600 text-justify">
         As we focus on Atlantic Canada, we navigate the complexities of international trade with precision and expertise.
         Our dedicated team understands the unique challenges and opportunities within this region, offering tailored solutions to meet the specific needs of our clients.
       </p>
@@ -26,7 +26,7 @@
 <!--      </p>-->
 
       <br>
-      <p class="text-gray-700">
+      <p class="text-lg leading-8 text-gray-600 text-justify">
         In the vibrant landscape of Atlantic Canada, Khan Traders stands as a beacon of reliability and simplicity.
         Whether you are looking to import or export scrap materials, our team is equipped to handle the nuances of customs, logistics,
         and compliance, providing you with a comprehensive solution for your business needs.
