--- a/Web/ClientApp/src/app/home/home.component.html
+++ b/Web/ClientApp/src/app/home/home.component.html
@@ -28,7 +28,7 @@
             Join us in shaping sustainable future as we export success from Atlantic Canada to the global stage. Explore our services and witness how, through responsible scrap management, we contribute to a world where prosperity knows no borders.</p>
           <div class="mt-10 flex items-center gap-x-6">
 
-            <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></a>
+            <button (click)="goToAbout()" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span aria-hidden="true">→</span></button>
           </div>
         </div>
         <img src="assets/logos/khan-traders-logo-final-removebg-preview.png" alt="" class="mt-10 aspect-[6/5] w-full max-w-lg rounded-2xl object-contain sm:mt-16 lg:mt-0 lg:max-w-none xl:row-span-2 xl:row-end-2 xl:mt-36">
