--- a/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
+++ b/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
@@ -7,7 +7,9 @@
     <!-- Second part for the image -->
     <div class="flex-2">
       <div class="hidden sm:flex">
+        <button (click)="goToHome()">
       <img class="h-20 w-auto" src="./assets/logos/KT--PNG.png" alt="Khan Traders">
+        </button>
       </div>
     </div>
 
