brand color has been used

--- a/Web/ClientApp/src/app/about/about.component.html
+++ b/Web/ClientApp/src/app/about/about.component.html
@@ -43,7 +43,7 @@
 </div>
 
 <div class="sm:flex flex-col items-center">
-  <p class="mx-auto text-center font-semibold text-indigo-600 text-xl animate-pulse">
+  <p class="mx-auto text-center font-semibold text-khanOrange text-xl animate-pulse">
     Join us in simplifying the scrap trade journey
   </p>
   <p class="text-gray-500 mx-auto md:pl-40 md:pr-40 pl-10 pr-10 mt-4 font-semibold text-justify">
