--- a/Web/ClientApp/src/app/home/home.component.html
+++ b/Web/ClientApp/src/app/home/home.component.html
@@ -53,7 +53,7 @@
 
   </p>
   <div class="flex flex-1 justify-end">
-    <a href="/quote" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get quotation</a>
+    <a href="/quote" class="rounded-md bg-khanOrange px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-orange-600 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get quotation</a>
   </div>
 </div>
 
