--- a/Web/ClientApp/src/app/quote/quote.component.html
+++ b/Web/ClientApp/src/app/quote/quote.component.html
@@ -60,8 +60,8 @@
 
         <div class="mt-8 gap-y-2">
           <button type="button" (click)="send()" [disabled]="!loginForm.valid || isButtonDisabled" id="button"
-                  class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-2.5 text-sm
-               font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline
+                  class="flex w-full justify-center rounded-md bg-khanOrange px-3 py-2.5 text-sm
+               font-semibold leading-6 text-white shadow-sm hover:bg-orange-600 focus-visible:outline
                focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600
                disabled:bg-slate-200 disabled:text-gray-400 cursor-pointer disabled:cursor-default">
             <span *ngIf="isButtonDisabled">Sending...</span>
