--- a/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
+++ b/Web/ClientApp/src/app/core/components/site-header/site-header.component.html
@@ -21,8 +21,8 @@
       <nav class="hidden sm:flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
         <div class="flex space-x-12">
           <button (click)="scrollToProducts()" class="text-sm font-semibold leading-6 text-gray-900">Product</button>
-          <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Features</a>
-          <button (click)="goToAbout()" class="text-sm font-semibold leading-6 text-gray-900">Company</button>
+          <button (click)="goToQuote()" class="text-sm font-semibold leading-6 text-gray-900">Contact</button>
+          <button (click)="goToAbout()" class="text-sm font-semibold leading-6 text-gray-900">About us</button>
         </div>
       </nav>
     </div>
@@ -73,9 +73,9 @@
             <a (click)="scrollToProducts()"
                class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Product</a>
             <a href="#"
-               class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Features</a>
+               class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Contact</a>
             <a (click)="goToAbout()"
-               class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Company</a>
+               class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">About us</a>
           </div>
           <div class="py-6">
           </div>
